# arco-ugg

./: .gitignore  LICENSE  README.md
arco/test/: arco.h  arcocommon.h  engine.cpp  engine.h  instr.cpp  instr.h  main.cpp  mem.c  mem.cpp  mem.h  message.h  opcodes.cpp  opcodes.h  opmul.h  queue.c  queue.cpp  queue.h  synth.cpp  synth.h  ugen.cpp  ugen.h  ugmul.h
ugg/: ugenv.py  ugmath.py
ugg/backup/: Ugen.py
ugg/code/: CMakeLists.txt  add.cpp  add.h  decay.cpp  decay.h  mult.cpp  mult.h  osci.cpp  osci.h
ugg/doc/: icmc.txt
ugg/framework/: CMakeLists.txt  ugen.cpp  ugen.h
ugg/src/framework/: CMakeLists.txt  uggtest.cpp
ugg/ugg/: Ugen-notopsort.py  Ugen.py  cmake.py  ugenv.ugg  ugosc.py  ugtest.py
